--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1 class="test">HELLO!</h1>
-
-
+    
+    <div class="splash">
+      <h1>Welcome!</h1>
+    </div>
 
 
     <script src="scripts.js"></script>
