increased padding added my info and image

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <nav>
         <ul>
           <li>More Info</li>
+          <li>Resume</li>
           <li>About Me</li>
           <li>Projects</li>
         </ul>
@@ -21,31 +22,40 @@
 
     <div class="project-container">
 
+      <h1>MY PROJECTS</h1>
+
       <div class="project project-one">
         <img src="./assets/images/splash-melb.jpg" alt="">
-        <h1>PROJECT ONE</h1>
+        <h2>PROJECT ONE</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
 
       <div class="project project-two">
         <img src="./assets/images/splash-melb.jpg" alt="">
-        <h1>PROJECT TWO</h1>
+        <h2>PROJECT TWO</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
 
       <div class="project project-three">
         <img src="./assets/images/splash-melb.jpg" alt="">
-        <h1>PROJECT THREE</h1>
+        <h2>PROJECT THREE</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
 
     </div>
 
     <div class="bio-container">
-       <img src="https://www.what-dog.net/Images/faces2/scroll001.jpg" alt="">
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h1>ABOUT ME</h1>
+       <img src="./assets/images/me.jpg" alt="">
+       <p>I'm a full-stack web developer from Australia who moved to San Francisco to pursue my passion in web development. My aesthetic is clean and meticulous with added functionality that adds to the overall user experience. </p>
+       <p>By nature I am a problem solver with a keen eye for details. I am proficient and well-versed in a variety of coding languages that have been listed below. I endeavor to never stop learning as I am constantly updating my skill-set to stay relevant in the web development field.</p>
+       <p>My long-term goal is to use the knowledge I've acquired to change the lives of Dementia patients and their loved ones as my mother-in-law has been suffering from the disease since 2013. I am hoping to make an impact that will result in a positive change.</p>
+    </div>
+
+    <div class="skills-container">
+      <ul>
+
+      </ul>
     </div>
 
     <footer>
