--- a/index.html
+++ b/index.html
@@ -54,8 +54,38 @@
     </div>
 
     <div class="skills-container">
+      <h1>SKILLS</h1>
       <ul>
-
+        <li>
+          <i class="devicon-javascript-plain"></i>
+        </li>
+        <li>
+          <i class="devicon-jquery-plain-wordmark"></i>
+        </li>
+        <li>
+          <i class="devicon-html5-plain-wordmark"></i>
+        </li>
+        <li>
+          <i class="devicon-css3-plain-wordmark"></i>
+        </li>
+        <li>
+          <i class="devicon-ruby-plain-wordmark"></i>
+        </li>
+        <li>
+          <i class="devicon-rails-plain-wordmark"></i>
+        </li>
+        <li>
+          <i class="devicon-nodejs-plain"></i>
+        </li>
+        <li>
+          <i class="devicon-git-plain"></i>
+        </li>
+        <li>
+          <i class="devicon-bootstrap-plain-wordmark"></i>
+        </li>
+        <li>
+          <i class="devicon-foundation-plain-wordmark"></i>
+        </li>
       </ul>
     </div>
 
